parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    ALL
    ALTER
    BETWEEN
    CREATE
    DOT
    DROP
    EXISTS
    IN
    IS
    LIKE
    NULL
    TABLE
    UNION

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement_list statement SEMICOLON
Rule 2     statement_list -> statement SEMICOLON
Rule 3     statement -> select_statement
Rule 4     statement -> insert_statement
Rule 5     statement -> update_statement
Rule 6     statement -> delete_statement
Rule 7     select_statement -> SELECT select_opts select_list FROM table_list opt_where opt_group opt_having opt_order
Rule 8     select_opts -> DISTINCT
Rule 9     select_opts -> empty
Rule 10    select_list -> select_list COMMA expression
Rule 11    select_list -> expression
Rule 12    table_list -> table_list COMMA table_reference
Rule 13    table_list -> table_reference
Rule 14    table_reference -> IDENTIFIER opt_alias opt_join
Rule 15    opt_alias -> IDENTIFIER
Rule 16    opt_alias -> empty
Rule 17    opt_join -> join_clause
Rule 18    opt_join -> empty
Rule 19    join_clause -> join_type JOIN table_reference ON expression
Rule 20    join_type -> INNER
Rule 21    join_type -> LEFT
Rule 22    join_type -> RIGHT
Rule 23    join_type -> OUTER
Rule 24    opt_where -> WHERE expression
Rule 25    opt_where -> empty
Rule 26    opt_group -> GROUP BY expression_list
Rule 27    opt_group -> empty
Rule 28    opt_having -> HAVING expression
Rule 29    opt_having -> empty
Rule 30    opt_order -> ORDER BY order_list
Rule 31    opt_order -> empty
Rule 32    order_list -> order_list COMMA order_expression
Rule 33    order_list -> order_expression
Rule 34    order_expression -> expression opt_ascdesc
Rule 35    opt_ascdesc -> ASC
Rule 36    opt_ascdesc -> DESC
Rule 37    opt_ascdesc -> empty
Rule 38    expression_list -> expression_list COMMA expression
Rule 39    expression_list -> expression
Rule 40    expression -> expression PLUS expression
Rule 41    expression -> expression MINUS expression
Rule 42    expression -> expression TIMES expression
Rule 43    expression -> expression DIVIDE expression
Rule 44    expression -> expression EQ expression
Rule 45    expression -> expression NEQ expression
Rule 46    expression -> expression LT expression
Rule 47    expression -> expression LE expression
Rule 48    expression -> expression GT expression
Rule 49    expression -> expression GE expression
Rule 50    expression -> expression AND expression
Rule 51    expression -> expression OR expression
Rule 52    expression -> NOT expression
Rule 53    expression -> LPAREN expression RPAREN
Rule 54    expression -> NUMBER
Rule 55    expression -> STRING
Rule 56    expression -> IDENTIFIER
Rule 57    expression -> CASE case_list ELSE expression END
Rule 58    case_list -> case_list WHEN expression THEN expression
Rule 59    case_list -> WHEN expression THEN expression
Rule 60    insert_statement -> INSERT INTO IDENTIFIER LPAREN expression_list RPAREN VALUES LPAREN expression_list RPAREN
Rule 61    update_statement -> UPDATE IDENTIFIER SET assignment_list opt_where
Rule 62    assignment_list -> assignment_list COMMA assignment
Rule 63    assignment_list -> assignment
Rule 64    assignment -> IDENTIFIER EQ expression
Rule 65    delete_statement -> DELETE FROM IDENTIFIER opt_where
Rule 66    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 
ALL                  : 
ALTER                : 
AND                  : 50
ASC                  : 35
BETWEEN              : 
BY                   : 26 30
CASE                 : 57
COMMA                : 10 12 32 38 62
CREATE               : 
DELETE               : 65
DESC                 : 36
DISTINCT             : 8
DIVIDE               : 43
DOT                  : 
DROP                 : 
ELSE                 : 57
END                  : 57
EQ                   : 44 64
EXISTS               : 
FROM                 : 7 65
GE                   : 49
GROUP                : 26
GT                   : 48
HAVING               : 28
IDENTIFIER           : 14 15 56 60 61 64 65
IN                   : 
INNER                : 20
INSERT               : 60
INTO                 : 60
IS                   : 
JOIN                 : 19
LE                   : 47
LEFT                 : 21
LIKE                 : 
LPAREN               : 53 60 60
LT                   : 46
MINUS                : 41
NEQ                  : 45
NOT                  : 52
NULL                 : 
NUMBER               : 54
ON                   : 19
OR                   : 51
ORDER                : 30
OUTER                : 23
PLUS                 : 40
RIGHT                : 22
RPAREN               : 53 60 60
SELECT               : 7
SEMICOLON            : 1 2
SET                  : 61
STRING               : 55
TABLE                : 
THEN                 : 58 59
TIMES                : 42
UNION                : 
UPDATE               : 61
VALUES               : 60
WHEN                 : 58 59
WHERE                : 24
error                : 

Nonterminals, with rules where they appear

assignment           : 62 63
assignment_list      : 61 62
case_list            : 57 58
delete_statement     : 6
empty                : 9 16 18 25 27 29 31 37
expression           : 10 11 19 24 28 34 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 57 58 58 59 59 64
expression_list      : 26 38 60 60
insert_statement     : 4
join_clause          : 17
join_type            : 19
opt_alias            : 14
opt_ascdesc          : 34
opt_group            : 7
opt_having           : 7
opt_join             : 14
opt_order            : 7
opt_where            : 7 61 65
order_expression     : 32 33
order_list           : 30 32
select_list          : 7 10
select_opts          : 7
select_statement     : 3
statement            : 1 2
statement_list       : 1 0
table_list           : 7 12
table_reference      : 12 13 19
update_statement     : 5

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement_list statement SEMICOLON
    (2) statement_list -> . statement SEMICOLON
    (3) statement -> . select_statement
    (4) statement -> . insert_statement
    (5) statement -> . update_statement
    (6) statement -> . delete_statement
    (7) select_statement -> . SELECT select_opts select_list FROM table_list opt_where opt_group opt_having opt_order
    (60) insert_statement -> . INSERT INTO IDENTIFIER LPAREN expression_list RPAREN VALUES LPAREN expression_list RPAREN
    (61) update_statement -> . UPDATE IDENTIFIER SET assignment_list opt_where
    (65) delete_statement -> . DELETE FROM IDENTIFIER opt_where

    SELECT          shift and go to state 7
    INSERT          shift and go to state 8
    UPDATE          shift and go to state 9
    DELETE          shift and go to state 10

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    select_statement               shift and go to state 3
    insert_statement               shift and go to state 4
    update_statement               shift and go to state 5
    delete_statement               shift and go to state 6

state 1

    (0) S' -> statement_list .
    (1) statement_list -> statement_list . statement SEMICOLON
    (3) statement -> . select_statement
    (4) statement -> . insert_statement
    (5) statement -> . update_statement
    (6) statement -> . delete_statement
    (7) select_statement -> . SELECT select_opts select_list FROM table_list opt_where opt_group opt_having opt_order
    (60) insert_statement -> . INSERT INTO IDENTIFIER LPAREN expression_list RPAREN VALUES LPAREN expression_list RPAREN
    (61) update_statement -> . UPDATE IDENTIFIER SET assignment_list opt_where
    (65) delete_statement -> . DELETE FROM IDENTIFIER opt_where

    SELECT          shift and go to state 7
    INSERT          shift and go to state 8
    UPDATE          shift and go to state 9
    DELETE          shift and go to state 10

    statement                      shift and go to state 11
    select_statement               shift and go to state 3
    insert_statement               shift and go to state 4
    update_statement               shift and go to state 5
    delete_statement               shift and go to state 6

state 2

    (2) statement_list -> statement . SEMICOLON

    SEMICOLON       shift and go to state 12


state 3

    (3) statement -> select_statement .

    SEMICOLON       reduce using rule 3 (statement -> select_statement .)


state 4

    (4) statement -> insert_statement .

    SEMICOLON       reduce using rule 4 (statement -> insert_statement .)


state 5

    (5) statement -> update_statement .

    SEMICOLON       reduce using rule 5 (statement -> update_statement .)


state 6

    (6) statement -> delete_statement .

    SEMICOLON       reduce using rule 6 (statement -> delete_statement .)


state 7

    (7) select_statement -> SELECT . select_opts select_list FROM table_list opt_where opt_group opt_having opt_order
    (8) select_opts -> . DISTINCT
    (9) select_opts -> . empty
    (66) empty -> .

    DISTINCT        shift and go to state 14
    NOT             reduce using rule 66 (empty -> .)
    LPAREN          reduce using rule 66 (empty -> .)
    NUMBER          reduce using rule 66 (empty -> .)
    STRING          reduce using rule 66 (empty -> .)
    IDENTIFIER      reduce using rule 66 (empty -> .)
    CASE            reduce using rule 66 (empty -> .)

    select_opts                    shift and go to state 13
    empty                          shift and go to state 15

state 8

    (60) insert_statement -> INSERT . INTO IDENTIFIER LPAREN expression_list RPAREN VALUES LPAREN expression_list RPAREN

    INTO            shift and go to state 16


state 9

    (61) update_statement -> UPDATE . IDENTIFIER SET assignment_list opt_where

    IDENTIFIER      shift and go to state 17


state 10

    (65) delete_statement -> DELETE . FROM IDENTIFIER opt_where

    FROM            shift and go to state 18


state 11

    (1) statement_list -> statement_list statement . SEMICOLON

    SEMICOLON       shift and go to state 19


state 12

    (2) statement_list -> statement SEMICOLON .

    SELECT          reduce using rule 2 (statement_list -> statement SEMICOLON .)
    INSERT          reduce using rule 2 (statement_list -> statement SEMICOLON .)
    UPDATE          reduce using rule 2 (statement_list -> statement SEMICOLON .)
    DELETE          reduce using rule 2 (statement_list -> statement SEMICOLON .)
    $end            reduce using rule 2 (statement_list -> statement SEMICOLON .)


state 13

    (7) select_statement -> SELECT select_opts . select_list FROM table_list opt_where opt_group opt_having opt_order
    (10) select_list -> . select_list COMMA expression
    (11) select_list -> . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    select_list                    shift and go to state 20
    expression                     shift and go to state 21

state 14

    (8) select_opts -> DISTINCT .

    NOT             reduce using rule 8 (select_opts -> DISTINCT .)
    LPAREN          reduce using rule 8 (select_opts -> DISTINCT .)
    NUMBER          reduce using rule 8 (select_opts -> DISTINCT .)
    STRING          reduce using rule 8 (select_opts -> DISTINCT .)
    IDENTIFIER      reduce using rule 8 (select_opts -> DISTINCT .)
    CASE            reduce using rule 8 (select_opts -> DISTINCT .)


state 15

    (9) select_opts -> empty .

    NOT             reduce using rule 9 (select_opts -> empty .)
    LPAREN          reduce using rule 9 (select_opts -> empty .)
    NUMBER          reduce using rule 9 (select_opts -> empty .)
    STRING          reduce using rule 9 (select_opts -> empty .)
    IDENTIFIER      reduce using rule 9 (select_opts -> empty .)
    CASE            reduce using rule 9 (select_opts -> empty .)


state 16

    (60) insert_statement -> INSERT INTO . IDENTIFIER LPAREN expression_list RPAREN VALUES LPAREN expression_list RPAREN

    IDENTIFIER      shift and go to state 28


state 17

    (61) update_statement -> UPDATE IDENTIFIER . SET assignment_list opt_where

    SET             shift and go to state 29


state 18

    (65) delete_statement -> DELETE FROM . IDENTIFIER opt_where

    IDENTIFIER      shift and go to state 30


state 19

    (1) statement_list -> statement_list statement SEMICOLON .

    SELECT          reduce using rule 1 (statement_list -> statement_list statement SEMICOLON .)
    INSERT          reduce using rule 1 (statement_list -> statement_list statement SEMICOLON .)
    UPDATE          reduce using rule 1 (statement_list -> statement_list statement SEMICOLON .)
    DELETE          reduce using rule 1 (statement_list -> statement_list statement SEMICOLON .)
    $end            reduce using rule 1 (statement_list -> statement_list statement SEMICOLON .)


state 20

    (7) select_statement -> SELECT select_opts select_list . FROM table_list opt_where opt_group opt_having opt_order
    (10) select_list -> select_list . COMMA expression

    FROM            shift and go to state 31
    COMMA           shift and go to state 32


state 21

    (11) select_list -> expression .
    (40) expression -> expression . PLUS expression
    (41) expression -> expression . MINUS expression
    (42) expression -> expression . TIMES expression
    (43) expression -> expression . DIVIDE expression
    (44) expression -> expression . EQ expression
    (45) expression -> expression . NEQ expression
    (46) expression -> expression . LT expression
    (47) expression -> expression . LE expression
    (48) expression -> expression . GT expression
    (49) expression -> expression . GE expression
    (50) expression -> expression . AND expression
    (51) expression -> expression . OR expression

    FROM            reduce using rule 11 (select_list -> expression .)
    COMMA           reduce using rule 11 (select_list -> expression .)
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    EQ              shift and go to state 37
    NEQ             shift and go to state 38
    LT              shift and go to state 39
    LE              shift and go to state 40
    GT              shift and go to state 41
    GE              shift and go to state 42
    AND             shift and go to state 43
    OR              shift and go to state 44


state 22

    (52) expression -> NOT . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 45

state 23

    (53) expression -> LPAREN . expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 46

state 24

    (54) expression -> NUMBER .

    PLUS            reduce using rule 54 (expression -> NUMBER .)
    MINUS           reduce using rule 54 (expression -> NUMBER .)
    TIMES           reduce using rule 54 (expression -> NUMBER .)
    DIVIDE          reduce using rule 54 (expression -> NUMBER .)
    EQ              reduce using rule 54 (expression -> NUMBER .)
    NEQ             reduce using rule 54 (expression -> NUMBER .)
    LT              reduce using rule 54 (expression -> NUMBER .)
    LE              reduce using rule 54 (expression -> NUMBER .)
    GT              reduce using rule 54 (expression -> NUMBER .)
    GE              reduce using rule 54 (expression -> NUMBER .)
    AND             reduce using rule 54 (expression -> NUMBER .)
    OR              reduce using rule 54 (expression -> NUMBER .)
    FROM            reduce using rule 54 (expression -> NUMBER .)
    COMMA           reduce using rule 54 (expression -> NUMBER .)
    RPAREN          reduce using rule 54 (expression -> NUMBER .)
    THEN            reduce using rule 54 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 54 (expression -> NUMBER .)
    GROUP           reduce using rule 54 (expression -> NUMBER .)
    HAVING          reduce using rule 54 (expression -> NUMBER .)
    ORDER           reduce using rule 54 (expression -> NUMBER .)
    END             reduce using rule 54 (expression -> NUMBER .)
    WHERE           reduce using rule 54 (expression -> NUMBER .)
    ELSE            reduce using rule 54 (expression -> NUMBER .)
    WHEN            reduce using rule 54 (expression -> NUMBER .)
    ASC             reduce using rule 54 (expression -> NUMBER .)
    DESC            reduce using rule 54 (expression -> NUMBER .)
    ON              reduce using rule 54 (expression -> NUMBER .)


state 25

    (55) expression -> STRING .

    PLUS            reduce using rule 55 (expression -> STRING .)
    MINUS           reduce using rule 55 (expression -> STRING .)
    TIMES           reduce using rule 55 (expression -> STRING .)
    DIVIDE          reduce using rule 55 (expression -> STRING .)
    EQ              reduce using rule 55 (expression -> STRING .)
    NEQ             reduce using rule 55 (expression -> STRING .)
    LT              reduce using rule 55 (expression -> STRING .)
    LE              reduce using rule 55 (expression -> STRING .)
    GT              reduce using rule 55 (expression -> STRING .)
    GE              reduce using rule 55 (expression -> STRING .)
    AND             reduce using rule 55 (expression -> STRING .)
    OR              reduce using rule 55 (expression -> STRING .)
    FROM            reduce using rule 55 (expression -> STRING .)
    COMMA           reduce using rule 55 (expression -> STRING .)
    RPAREN          reduce using rule 55 (expression -> STRING .)
    THEN            reduce using rule 55 (expression -> STRING .)
    SEMICOLON       reduce using rule 55 (expression -> STRING .)
    GROUP           reduce using rule 55 (expression -> STRING .)
    HAVING          reduce using rule 55 (expression -> STRING .)
    ORDER           reduce using rule 55 (expression -> STRING .)
    END             reduce using rule 55 (expression -> STRING .)
    WHERE           reduce using rule 55 (expression -> STRING .)
    ELSE            reduce using rule 55 (expression -> STRING .)
    WHEN            reduce using rule 55 (expression -> STRING .)
    ASC             reduce using rule 55 (expression -> STRING .)
    DESC            reduce using rule 55 (expression -> STRING .)
    ON              reduce using rule 55 (expression -> STRING .)


state 26

    (56) expression -> IDENTIFIER .

    PLUS            reduce using rule 56 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 56 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 56 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 56 (expression -> IDENTIFIER .)
    EQ              reduce using rule 56 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 56 (expression -> IDENTIFIER .)
    LT              reduce using rule 56 (expression -> IDENTIFIER .)
    LE              reduce using rule 56 (expression -> IDENTIFIER .)
    GT              reduce using rule 56 (expression -> IDENTIFIER .)
    GE              reduce using rule 56 (expression -> IDENTIFIER .)
    AND             reduce using rule 56 (expression -> IDENTIFIER .)
    OR              reduce using rule 56 (expression -> IDENTIFIER .)
    FROM            reduce using rule 56 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 56 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 56 (expression -> IDENTIFIER .)
    THEN            reduce using rule 56 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 56 (expression -> IDENTIFIER .)
    GROUP           reduce using rule 56 (expression -> IDENTIFIER .)
    HAVING          reduce using rule 56 (expression -> IDENTIFIER .)
    ORDER           reduce using rule 56 (expression -> IDENTIFIER .)
    END             reduce using rule 56 (expression -> IDENTIFIER .)
    WHERE           reduce using rule 56 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 56 (expression -> IDENTIFIER .)
    WHEN            reduce using rule 56 (expression -> IDENTIFIER .)
    ASC             reduce using rule 56 (expression -> IDENTIFIER .)
    DESC            reduce using rule 56 (expression -> IDENTIFIER .)
    ON              reduce using rule 56 (expression -> IDENTIFIER .)


state 27

    (57) expression -> CASE . case_list ELSE expression END
    (58) case_list -> . case_list WHEN expression THEN expression
    (59) case_list -> . WHEN expression THEN expression

    WHEN            shift and go to state 48

    case_list                      shift and go to state 47

state 28

    (60) insert_statement -> INSERT INTO IDENTIFIER . LPAREN expression_list RPAREN VALUES LPAREN expression_list RPAREN

    LPAREN          shift and go to state 49


state 29

    (61) update_statement -> UPDATE IDENTIFIER SET . assignment_list opt_where
    (62) assignment_list -> . assignment_list COMMA assignment
    (63) assignment_list -> . assignment
    (64) assignment -> . IDENTIFIER EQ expression

    IDENTIFIER      shift and go to state 50

    assignment_list                shift and go to state 51
    assignment                     shift and go to state 52

state 30

    (65) delete_statement -> DELETE FROM IDENTIFIER . opt_where
    (24) opt_where -> . WHERE expression
    (25) opt_where -> . empty
    (66) empty -> .

    WHERE           shift and go to state 54
    SEMICOLON       reduce using rule 66 (empty -> .)

    opt_where                      shift and go to state 53
    empty                          shift and go to state 55

state 31

    (7) select_statement -> SELECT select_opts select_list FROM . table_list opt_where opt_group opt_having opt_order
    (12) table_list -> . table_list COMMA table_reference
    (13) table_list -> . table_reference
    (14) table_reference -> . IDENTIFIER opt_alias opt_join

    IDENTIFIER      shift and go to state 58

    table_list                     shift and go to state 56
    table_reference                shift and go to state 57

state 32

    (10) select_list -> select_list COMMA . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 59

state 33

    (40) expression -> expression PLUS . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 60

state 34

    (41) expression -> expression MINUS . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 61

state 35

    (42) expression -> expression TIMES . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 62

state 36

    (43) expression -> expression DIVIDE . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 63

state 37

    (44) expression -> expression EQ . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 64

state 38

    (45) expression -> expression NEQ . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 65

state 39

    (46) expression -> expression LT . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 66

state 40

    (47) expression -> expression LE . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 67

state 41

    (48) expression -> expression GT . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 68

state 42

    (49) expression -> expression GE . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression LT expression
    (47) expression -> . expression LE expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression GE expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . NOT expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . IDENTIFIER
    (57) expression -> . CASE case_list ELSE expression END

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 26
    CASE            shift and go to state 27

    expression                     shift and go to state 69

state 43
